# reviv

./: .gitignore  README.md  const.py  db.sqlite3  env.example  google_nano_test.py  main.py  pyproject.toml  replicate_nano_test.py  requirements.txt
server/: .env.example  README.md  READMYAPI.md  conftest.py  env.example  pyproject.toml
server/config/: celery.py  settings.py  urls.py
server/docs/plans/: 2025-12-22-webauthn-passwordless-hardening.md
server/reviv/: admin.py  apps.py  urls.py
server/reviv/management/: __init__.py
server/reviv/management/commands/: __init__.py  create_credit_packs.py
server/reviv/migrations/: 0001_initial.py  0002_alter_creditpack_price_cents.py
server/reviv/models/: __init__.py  credit.py  passkey.py  restoration.py  user.py
server/reviv/serializers/: __init__.py  credit.py  restoration.py  user.py
server/reviv/tasks/: __init__.py  cleanup.py  restoration.py
server/reviv/tests/: __init__.py
server/reviv/tests/integration_tests/: __init__.py  test_integration_auth.py  test_integration_restoration.py
server/reviv/tests/unit_tests/: __init__.py  test_auth_google_only.py  test_browsable_api_css.py  test_email_passkey_views.py  test_error_formatting.py  test_health_view.py  test_kie_client.py  test_management_commands.py  test_models.py  test_passkey_views.py  test_passwordless_config.py  test_payment_views.py  test_restoration_views.py  test_social_share_views.py  test_stripe_webhook.py  test_tasks.py  (+5 more)
server/reviv/utils/: __init__.py  exceptions.py  kie_client.py  webauthn.py
server/reviv/views/: __init__.py  api_root.py  auth.py  email_passkey.py  google_login.py  health.py  passkey.py  payment.py  restoration.py
(+36 files in other folders)
