[project]
name = "reviv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django-allauth>=63.0.0",
    "google-genai>=1.55.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "replicate>=1.0.7",
    "requests>=2.31.0",
]
